--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>상품 쇼핑몰</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="/src/styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       theme: {
@@ -18,9 +17,10 @@
       }
     };
   </script>
+  <script type="module" crossorigin src="/front_6th_chapter1-2/assets/main-E6wuDBxW.js"></script>
+  <link rel="stylesheet" crossorigin href="/front_6th_chapter1-2/assets/main-C3vnCDW9.css">
 </head>
 <body class="bg-gray-50">
-<div id="root"></div>
-<script type="module" src="/src/main.js"></script>
+<div id="root"></div>
 </body>
 </html>
